# ClearSign

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  SECURITY.md  render.yaml  ruff.toml  vercel.json
.agents/: AGENTS.md
.cursor/: mcp.json
.github/workflows/: ci.yml  deploy.yml
.mustel/: cache.json
backend/: Dockerfile  benchmark.py  benchmark_report.json  create_favicon.py  pyproject.toml  requirements.txt  test_ddg_lite_parse_complete.py  wrangler.toml
backend/app/: main.py
backend/app/middleware/: file_validation.py
backend/app/models/: __init__.py  enums.py  request.py  response.py
backend/app/prompts/: __init__.py  breakdown.py  qa.py
backend/app/routers/: analyse.py  qa.py
backend/app/services/: __init__.py  classifier.py  clause_segmenter.py  extractor.py  groq_client.py  pdf_generator.py  web_search.py
backend/tests/: test_clause_segmenter.py  test_e2e.py  test_extractor.py  test_multi_upload.py  test_reconcile.py  test_routers.py  test_web_search.py
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  requirements.txt  tailwind.config.ts  vercel.json
frontend/api/: index.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analyse/: page.tsx
frontend/components/results/: ClauseCard.tsx  ClauseList.tsx  QAPanel.tsx  ResultsHeader.tsx
frontend/components/shared/: Disclaimer.tsx
frontend/components/ui/: accordion-demo.tsx  ai-chat.tsx  (+7 more)
frontend/hooks/: useFileUpload.ts  useSSE.ts
frontend/lib/: api.ts  constants.ts  fileStore.ts
frontend/types/: index.ts
scripts/: push-to-github.ps1
(+14 files in other folders)
