[project]
name = "clearsign-backend"
version = "1.0.0"
description = "ClearSign API — AI-powered document analysis"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
